Fix JavaFX module path in Windows installer